improved devops section

--- a/gradu2.bib
+++ b/gradu2.bib
@@ -1,3 +1,32 @@
+@inproceedings{breckMLTestScore2017a,
+  title = {The {{ML Test Score}}: {{A Rubric}} for {{ML Production Readiness}} and {{Technical Debt Reduction}}},
+  shorttitle = {The {{ML Test Score}}},
+  booktitle = {Proceedings of {{IEEE Big Data}}},
+  author = {Breck, Eric and Cai, Shanqing and Nielsen, Eric and Salib, Michael and Sculley, D.},
+  date = {2017},
+  file = {C\:\\Users\\master\\Zotero\\storage\\LEKCIDWU\\Breck et al_2017_The ML Test Score.pdf}
+}
+
+@misc{brunnertPerformanceorientedDevOpsResearch2015,
+  title = {Performance-Oriented {{DevOps}}: {{A Research Agenda}}},
+  shorttitle = {Performance-Oriented {{DevOps}}},
+  author = {Brunnert, Andreas and van Hoorn, Andre and Willnecker, Felix and Danciu, Alexandru and Hasselbring, Wilhelm and Heger, Christoph and Herbst, Nikolas and Jamshidi, Pooyan and Jung, Reiner and von Kistowski, Joakim and Koziolek, Anne and Kroß, Johannes and Spinner, Simon and Vögele, Christian and Walter, Jürgen and Wert, Alexander},
+  options = {useprefix=true},
+  date = {2015-08-18},
+  number = {arXiv:1508.04752},
+  eprint = {1508.04752},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.1508.04752},
+  url = {http://arxiv.org/abs/1508.04752},
+  urldate = {2023-01-17},
+  abstract = {DevOps is a trend towards a tighter integration between development (Dev) and operations (Ops) teams. The need for such an integration is driven by the requirement to continuously adapt enterprise applications (EAs) to changes in the business environment. As of today, DevOps concepts have been primarily introduced to ensure a constant flow of features and bug fixes into new releases from a functional perspective. In order to integrate a non-functional perspective into these DevOps concepts this report focuses on tools, activities, and processes to ensure one of the most important quality attributes of a software system, namely performance. Performance describes system properties concerning its timeliness and use of resources. Common metrics are response time, throughput, and resource utilization. Performance goals for EAs are typically defined by setting upper and/or lower bounds for these metrics and specific business transactions. In order to ensure that such performance goals can be met, several activities are required during development and operation of these systems as well as during the transition from Dev to Ops. Activities during development are typically summarized by the term Software Performance Engineering (SPE), whereas activities during operations are called Application Performance Management (APM). SPE and APM were historically tackled independently from each other, but the newly emerging DevOps concepts require and enable a tighter integration between both activity streams. This report presents existing solutions to support this integration as well as open research challenges in this area.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Performance,Computer Science - Software Engineering},
+  file = {C\:\\Users\\master\\Zotero\\storage\\9MDJPVS9\\Brunnert et al_2015_Performance-oriented DevOps.pdf;C\:\\Users\\master\\Zotero\\storage\\3DKEU57U\\1508.html}
+}
+
 @inproceedings{cardososilvaBenchmarkingMachineLearning2020,
   title = {Benchmarking {{Machine Learning Solutions}} in {{Production}}},
   booktitle = {2020 19th {{IEEE International Conference}} on {{Machine Learning}} and {{Applications}} ({{ICMLA}})},
@@ -28,6 +57,21 @@
   archiveprefix = {arXiv},
   keywords = {_tablet,Computer Science - Machine Learning,Computer Science - Software Engineering},
   file = {C\:\\Users\\master\\Zotero\\storage\\NPNEQEVA\\Côté et al_2022_Quality issues in Machine Learning Software Systems.pdf;C\:\\Users\\master\\Zotero\\storage\\ES8GKMEI\\2208.html}
+}
+
+@article{finzerDataScienceEducation2013,
+  title = {The {{Data Science Education Dilemma}}},
+  author = {Finzer, William},
+  date = {2013},
+  journaltitle = {Technology Innovations in Statistics Education},
+  volume = {7},
+  number = {2},
+  doi = {10.5070/T572013891},
+  url = {https://escholarship.org/uc/item/7gv0q9dc},
+  urldate = {2023-01-17},
+  abstract = {The need for people fluent in working with data is growing rapidly and enormously, but U.S. K–12 education does not provide meaningful learning experiences designed to develop understanding of data science concepts or a fluency with data science skills. Data science is inherently inter-disciplinary, so it makes sense to integrate it with existing content areas, but difficulties abound. Consideration of the work involved in doing data science and the habits of mind that lie behind it leads to a way of thinking about integrating data science with mathematics and science. Examples drawn from current activity development in the Data Games project shed some light on what technology-based, data-driven might be like. The project’s ongoing research on learners’ conceptions of organizing data and the relevance to data science education is explained.},
+  langid = {english},
+  file = {C\:\\Users\\master\\Zotero\\storage\\YWX2L6LE\\Finzer_2013_The Data Science Education Dilemma.pdf}
 }
 
 @misc{kreuzbergerMachineLearningOperations2022,
@@ -68,6 +112,25 @@
   file = {C\:\\Users\\master\\Zotero\\storage\\278JM9KT\\Lones_2022_How to avoid machine learning pitfalls.pdf;C\:\\Users\\master\\Zotero\\storage\\6RWMHTU8\\2108.html}
 }
 
+@article{mishraDevOpsSoftwareQuality2020,
+  title = {{{DevOps}} and Software Quality: {{A}} Systematic Mapping},
+  shorttitle = {{{DevOps}} and Software Quality},
+  author = {Mishra, Alok and Otaiwi, Ziadoon},
+  date = {2020-11-01},
+  journaltitle = {Computer Science Review},
+  shortjournal = {Computer Science Review},
+  volume = {38},
+  pages = {100308},
+  issn = {1574-0137},
+  doi = {10.1016/j.cosrev.2020.100308},
+  url = {https://www.sciencedirect.com/science/article/pii/S1574013720304081},
+  urldate = {2023-01-17},
+  abstract = {Quality pressure is one of the factors affecting processes for software development in its various stages. DevOps is one of the proposed solutions to such pressure. The primary focus of DevOps is to increase the deployment speed, frequency and quality. DevOps is a mixture of different developments and operations to its multitudinous ramifications in software development industries, DevOps have attracted the interest of many researchers. There are considerable literature surveys on this critical innovation in software development, yet, little attention has been given to DevOps impact on software quality. This research is aimed at analyzing the implications of DevOps features on software quality. DevOps can also be referred to a change in organization cultures aimed at removal of gaps between the development and operations of an organization. The adoption of DevOps in an organization provides many benefits including quality but also brings challenges to an organization. This study presents systematic mapping of the impact of DevOps on software quality. The results of this study provide a better understanding of DevOps on software quality for both professionals and researchers working in this area. The study shows research was mainly focused in automation, culture, continuous delivery, fast feedback of DevOps. There is need of further research in many areas of DevOps (for instance: measurement, development of metrics of different stages to assess its performance, culture, practices toward ensuring quality assurance, and quality factors such as usability, efficiency, software maintainability and portability).},
+  langid = {english},
+  keywords = {Automation,Development,DevOps,Measurement,Operations,Software,Software quality,Systematic mapping},
+  file = {C\:\\Users\\master\\Zotero\\storage\\FI2BPQCJ\\Mishra_Otaiwi_2020_DevOps and software quality.pdf;C\:\\Users\\master\\Zotero\\storage\\NTDWUG9S\\S1574013720304081.html}
+}
+
 @misc{shankarOperationalizingMachineLearning2022,
   title = {Operationalizing {{Machine Learning}}: {{An Interview Study}}},
   shorttitle = {Operationalizing {{Machine Learning}}},
@@ -85,4 +148,22 @@
   archiveprefix = {arXiv},
   keywords = {_tablet,Computer Science - Human-Computer Interaction,Computer Science - Machine Learning,Computer Science - Software Engineering},
   file = {C\:\\Users\\master\\Zotero\\storage\\K7KRWSL2\\Shankar et al_2022_Operationalizing Machine Learning.pdf;C\:\\Users\\master\\Zotero\\storage\\AWM9SK8B\\2209.html}
+}
+
+@article{wallerIncludingPerformanceBenchmarks2015,
+  title = {Including {{Performance Benchmarks}} into {{Continuous Integration}} to {{Enable DevOps}}},
+  author = {Waller, Jan and Ehmke, Nils C. and Hasselbring, Wilhelm},
+  date = {2015-04-03},
+  journaltitle = {ACM SIGSOFT Software Engineering Notes},
+  shortjournal = {SIGSOFT Softw. Eng. Notes},
+  volume = {40},
+  number = {2},
+  pages = {1--4},
+  issn = {0163-5948},
+  doi = {10.1145/2735399.2735416},
+  url = {https://doi.org/10.1145/2735399.2735416},
+  urldate = {2023-01-17},
+  abstract = {The DevOps movement intends to improve communication, collaboration, and integration between software developers (Dev) and IT operations professionals (Ops). Automation of software quality assurance is key to DevOps success. We present how automated performance benchmarks may be included into continuous integration. As an example, we report on regression benchmarks for application monitoring frameworks and illustrate the inclusion of automated benchmarks into continuous integration setups.},
+  keywords = {Jenkins,Kieker,MooBench},
+  file = {C\:\\Users\\master\\Zotero\\storage\\L5MUF3HG\\Waller et al_2015_Including Performance Benchmarks into Continuous Integration to Enable DevOps.pdf}
 }
