--- a/thesis/gradu2.bib
+++ b/thesis/gradu2.bib
@@ -1,9 +1,28 @@
+@misc{bakerAcceleratingNeuralArchitecture2017,
+  title = {Accelerating {{Neural Architecture Search}} Using {{Performance Prediction}}},
+  author = {Baker, Bowen and Gupta, Otkrist and Raskar, Ramesh and Naik, Nikhil},
+  date = {2017-11-08},
+  number = {arXiv:1705.10823},
+  eprint = {1705.10823},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.1705.10823},
+  url = {http://arxiv.org/abs/1705.10823},
+  urldate = {2023-01-25},
+  abstract = {Methods for neural network hyperparameter optimization and meta-modeling are computationally expensive due to the need to train a large number of model configurations. In this paper, we show that standard frequentist regression models can predict the final performance of partially trained model configurations using features based on network architectures, hyperparameters, and time-series validation performance data. We empirically show that our performance prediction models are much more effective than prominent Bayesian counterparts, are simpler to implement, and are faster to train. Our models can predict final performance in both visual classification and language modeling domains, are effective for predicting performance of drastically varying model architectures, and can even generalize between model classes. Using these prediction models, we also propose an early stopping method for hyperparameter optimization and meta-modeling, which obtains a speedup of a factor up to 6x in both hyperparameter optimization and meta-modeling. Finally, we empirically show that our early stopping method can be seamlessly incorporated into both reinforcement learning-based architecture selection algorithms and bandit based search methods. Through extensive experimentation, we empirically show our performance prediction models and early stopping algorithm are state-of-the-art in terms of prediction accuracy and speedup achieved while still identifying the optimal model configurations.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning,Computer Science - Neural and Evolutionary Computing},
+  file = {C\:\\Users\\master\\Zotero\\storage\\I93LMDHA\\Baker et al_2017_Accelerating Neural Architecture Search using Performance Prediction.pdf;C\:\\Users\\master\\Zotero\\storage\\IWHABXLB\\1705.html}
+}
+
 @inproceedings{breckMLTestScore2017a,
   title = {The {{ML Test Score}}: {{A Rubric}} for {{ML Production Readiness}} and {{Technical Debt Reduction}}},
   shorttitle = {The {{ML Test Score}}},
   booktitle = {Proceedings of {{IEEE Big Data}}},
   author = {Breck, Eric and Cai, Shanqing and Nielsen, Eric and Salib, Michael and Sculley, D.},
   date = {2017},
+  keywords = {_tablet},
   file = {C\:\\Users\\master\\Zotero\\storage\\LEKCIDWU\\Breck et al_2017_The ML Test Score.pdf}
 }
 
@@ -23,7 +42,7 @@
   urldate = {2023-01-17},
   abstract = {DevOps is a trend towards a tighter integration between development (Dev) and operations (Ops) teams. The need for such an integration is driven by the requirement to continuously adapt enterprise applications (EAs) to changes in the business environment. As of today, DevOps concepts have been primarily introduced to ensure a constant flow of features and bug fixes into new releases from a functional perspective. In order to integrate a non-functional perspective into these DevOps concepts this report focuses on tools, activities, and processes to ensure one of the most important quality attributes of a software system, namely performance. Performance describes system properties concerning its timeliness and use of resources. Common metrics are response time, throughput, and resource utilization. Performance goals for EAs are typically defined by setting upper and/or lower bounds for these metrics and specific business transactions. In order to ensure that such performance goals can be met, several activities are required during development and operation of these systems as well as during the transition from Dev to Ops. Activities during development are typically summarized by the term Software Performance Engineering (SPE), whereas activities during operations are called Application Performance Management (APM). SPE and APM were historically tackled independently from each other, but the newly emerging DevOps concepts require and enable a tighter integration between both activity streams. This report presents existing solutions to support this integration as well as open research challenges in this area.},
   archiveprefix = {arXiv},
-  keywords = {Computer Science - Performance,Computer Science - Software Engineering},
+  keywords = {_tablet,Computer Science - Performance,Computer Science - Software Engineering},
   file = {C\:\\Users\\master\\Zotero\\storage\\9MDJPVS9\\Brunnert et al_2015_Performance-oriented DevOps.pdf;C\:\\Users\\master\\Zotero\\storage\\3DKEU57U\\1508.html}
 }
 
@@ -71,6 +90,7 @@
   urldate = {2023-01-17},
   abstract = {The need for people fluent in working with data is growing rapidly and enormously, but U.S. K–12 education does not provide meaningful learning experiences designed to develop understanding of data science concepts or a fluency with data science skills. Data science is inherently inter-disciplinary, so it makes sense to integrate it with existing content areas, but difficulties abound. Consideration of the work involved in doing data science and the habits of mind that lie behind it leads to a way of thinking about integrating data science with mathematics and science. Examples drawn from current activity development in the Data Games project shed some light on what technology-based, data-driven might be like. The project’s ongoing research on learners’ conceptions of organizing data and the relevance to data science education is explained.},
   langid = {english},
+  keywords = {_tablet},
   file = {C\:\\Users\\master\\Zotero\\storage\\YWX2L6LE\\Finzer_2013_The Data Science Education Dilemma.pdf}
 }
 
@@ -127,7 +147,7 @@
   urldate = {2023-01-17},
   abstract = {Quality pressure is one of the factors affecting processes for software development in its various stages. DevOps is one of the proposed solutions to such pressure. The primary focus of DevOps is to increase the deployment speed, frequency and quality. DevOps is a mixture of different developments and operations to its multitudinous ramifications in software development industries, DevOps have attracted the interest of many researchers. There are considerable literature surveys on this critical innovation in software development, yet, little attention has been given to DevOps impact on software quality. This research is aimed at analyzing the implications of DevOps features on software quality. DevOps can also be referred to a change in organization cultures aimed at removal of gaps between the development and operations of an organization. The adoption of DevOps in an organization provides many benefits including quality but also brings challenges to an organization. This study presents systematic mapping of the impact of DevOps on software quality. The results of this study provide a better understanding of DevOps on software quality for both professionals and researchers working in this area. The study shows research was mainly focused in automation, culture, continuous delivery, fast feedback of DevOps. There is need of further research in many areas of DevOps (for instance: measurement, development of metrics of different stages to assess its performance, culture, practices toward ensuring quality assurance, and quality factors such as usability, efficiency, software maintainability and portability).},
   langid = {english},
-  keywords = {Automation,Development,DevOps,Measurement,Operations,Software,Software quality,Systematic mapping},
+  keywords = {_tablet,Automation,Development,DevOps,Measurement,Operations,Software,Software quality,Systematic mapping},
   file = {C\:\\Users\\master\\Zotero\\storage\\FI2BPQCJ\\Mishra_Otaiwi_2020_DevOps and software quality.pdf;C\:\\Users\\master\\Zotero\\storage\\NTDWUG9S\\S1574013720304081.html}
 }
 
@@ -164,6 +184,50 @@
   url = {https://doi.org/10.1145/2735399.2735416},
   urldate = {2023-01-17},
   abstract = {The DevOps movement intends to improve communication, collaboration, and integration between software developers (Dev) and IT operations professionals (Ops). Automation of software quality assurance is key to DevOps success. We present how automated performance benchmarks may be included into continuous integration. As an example, we report on regression benchmarks for application monitoring frameworks and illustrate the inclusion of automated benchmarks into continuous integration setups.},
-  keywords = {Jenkins,Kieker,MooBench},
+  keywords = {_tablet,Jenkins,Kieker,MooBench},
   file = {C\:\\Users\\master\\Zotero\\storage\\L5MUF3HG\\Waller et al_2015_Including Performance Benchmarks into Continuous Integration to Enable DevOps.pdf}
+}
+
+@article{yangHyperparameterOptimizationMachine2020,
+  title = {On {{Hyperparameter Optimization}} of {{Machine Learning Algorithms}}: {{Theory}} and {{Practice}}},
+  shorttitle = {On {{Hyperparameter Optimization}} of {{Machine Learning Algorithms}}},
+  author = {Yang, Li and Shami, Abdallah},
+  date = {2020-11},
+  journaltitle = {Neurocomputing},
+  shortjournal = {Neurocomputing},
+  volume = {415},
+  eprint = {2007.15745},
+  eprinttype = {arxiv},
+  primaryclass = {cs, stat},
+  pages = {295--316},
+  issn = {09252312},
+  doi = {10.1016/j.neucom.2020.07.061},
+  url = {http://arxiv.org/abs/2007.15745},
+  urldate = {2023-01-25},
+  abstract = {Machine learning algorithms have been used widely in various applications and areas. To fit a machine learning model into different problems, its hyper-parameters must be tuned. Selecting the best hyper-parameter configuration for machine learning models has a direct impact on the model's performance. It often requires deep knowledge of machine learning algorithms and appropriate hyper-parameter optimization techniques. Although several automatic optimization techniques exist, they have different strengths and drawbacks when applied to different types of problems. In this paper, optimizing the hyper-parameters of common machine learning models is studied. We introduce several state-of-the-art optimization techniques and discuss how to apply them to machine learning algorithms. Many available libraries and frameworks developed for hyper-parameter optimization problems are provided, and some open challenges of hyper-parameter optimization research are also discussed in this paper. Moreover, experiments are conducted on benchmark datasets to compare the performance of different optimization methods and provide practical examples of hyper-parameter optimization. This survey paper will help industrial users, data analysts, and researchers to better develop machine learning models by identifying the proper hyper-parameter configurations effectively.},
+  archiveprefix = {arXiv},
+  keywords = {68T01; 90C31,C.2.0,Computer Science - Machine Learning,I.2.0,I.2.2,Statistics - Machine Learning},
+  file = {C\:\\Users\\master\\Zotero\\storage\\6TZA7J63\\Yang_Shami_2020_On Hyperparameter Optimization of Machine Learning Algorithms.pdf;C\:\\Users\\master\\Zotero\\storage\\CNXX8V4E\\2007.html}
+}
+
+@article{yangIoTDataAnalytics2022,
+  title = {{{IoT Data Analytics}} in {{Dynamic Environments}}: {{From An Automated Machine Learning Perspective}}},
+  shorttitle = {{{IoT Data Analytics}} in {{Dynamic Environments}}},
+  author = {Yang, Li and Shami, Abdallah},
+  date = {2022-11},
+  journaltitle = {Engineering Applications of Artificial Intelligence},
+  shortjournal = {Engineering Applications of Artificial Intelligence},
+  volume = {116},
+  eprint = {2209.08018},
+  eprinttype = {arxiv},
+  primaryclass = {cs, eess},
+  pages = {105366},
+  issn = {09521976},
+  doi = {10.1016/j.engappai.2022.105366},
+  url = {http://arxiv.org/abs/2209.08018},
+  urldate = {2023-01-25},
+  abstract = {With the wide spread of sensors and smart devices in recent years, the data generation speed of the Internet of Things (IoT) systems has increased dramatically. In IoT systems, massive volumes of data must be processed, transformed, and analyzed on a frequent basis to enable various IoT services and functionalities. Machine Learning (ML) approaches have shown their capacity for IoT data analytics. However, applying ML models to IoT data analytics tasks still faces many difficulties and challenges, specifically, effective model selection, design/tuning, and updating, which have brought massive demand for experienced data scientists. Additionally, the dynamic nature of IoT data may introduce concept drift issues, causing model performance degradation. To reduce human efforts, Automated Machine Learning (AutoML) has become a popular field that aims to automatically select, construct, tune, and update machine learning models to achieve the best performance on specified tasks. In this paper, we conduct a review of existing methods in the model selection, tuning, and updating procedures in the area of AutoML in order to identify and summarize the optimal solutions for every step of applying ML algorithms to IoT data analytics. To justify our findings and help industrial users and researchers better implement AutoML approaches, a case study of applying AutoML to IoT anomaly detection problems is conducted in this work. Lastly, we discuss and classify the challenges and research directions for this domain.},
+  archiveprefix = {arXiv},
+  keywords = {68T01; 90C31,C.2.0,Computer Science - Cryptography and Security,Computer Science - Machine Learning,Computer Science - Networking and Internet Architecture,Electrical Engineering and Systems Science - Systems and Control,I.2.0,I.2.2},
+  file = {C\:\\Users\\master\\Zotero\\storage\\MHGKKJW5\\Yang_Shami_2022_IoT Data Analytics in Dynamic Environments.pdf;C\:\\Users\\master\\Zotero\\storage\\AFUU3C7X\\2209.html}
 }
