--- a/thesis/gradu2.tex
+++ b/thesis/gradu2.tex
@@ -3,6 +3,7 @@
 %\documentclass[utf8,bachelor,english]{gradu3}
 
 \usepackage{graphicx} % for including pictures
+\graphicspath{ {assets/} }
 
 \usepackage{amsmath} % useful for math (optional)
 
@@ -32,7 +33,7 @@
 \author{Aleksander Lempinen}
 \contactinformation{\texttt{aleksander.lempinen@gmail.com}}
 % use a separate \author command for each author, if there is more than one
-\supervisor{TODO supervisor}
+\supervisor{Tommi Mikkonen}
 % use a separate \supervisor command for each supervisor, if there
 % is more than one
 
